--- a/src/main/resources/public/public/index.html
+++ b/src/main/resources/public/public/index.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- Bootstrap -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font-awesome -->
-    <link href="node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
     <!-- App CSS -->
-    <link href="src/css/main.css" rel="stylesheet">
-    <link href="src/css/colors.css" rel="stylesheet">
+    <link href="../src/css/main.css" rel="stylesheet">
+    <link href="../src/css/colors.css" rel="stylesheet">
 </head>
-
+11
 <body>
 
 <div id="app"></div>
@@ -24,11 +24,11 @@
 <!-- Google sign-in -->
 <script src="https://apis.google.com/js/platform.js"></script>
 <!-- JQuery -->
-<script src="node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/jquery/dist/jquery.js"></script>
 <!-- Bootstrap -->
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- App JS -->
-<script src="index.js"></script>
+<script src="../src/index.js"></script>
 </body>
 
 </html>
