--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>House utilities manager</title>
+    <title>Track your services</title>
     <meta name="google-signin-client_id"
           content="426148587752-j5f2svrk2cff31rjclv8pjg33uisnvu5.apps.googleusercontent.com"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font-awesome -->
     <link href="node_modules/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <!-- App CSS -->
     <link href="src/css/main.css" rel="stylesheet">
     <link href="src/css/colors.css" rel="stylesheet">
 </head>
-
 <body>
-
 <div id="app"></div>
-
-<!-- Google sign-in -->
-<!-- JQuery -->
 <script src="node_modules/jquery/dist/jquery.js"></script>
-<!-- Bootstrap -->
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- App JS -->
-<script src="index.js"></script>
+<script src="src/index.js"></script>
+<script type="text/javascript" src="build/static/js/main.072b6eb9.js"></script>
 </body>
-
 </html>
