Import google platform.js

--- a/src/main/resources/static/src/index.html
+++ b/src/main/resources/static/src/index.html
@@ -22,7 +22,7 @@
 <div id="app"></div>
 
 <!-- Google sign-in -->
-<script src="https://apis.google.com/js/client.js"></script>
+<script src="https://apis.google.com/js/platform.js"></script>
 <!-- JQuery -->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <!-- Bootstrap -->
